--- a/core/templates/core/product_list.html
+++ b/core/templates/core/product_list.html
@@ -14,6 +14,7 @@
 <table class="table table-bordered table-hover table-striped">
     <thead class="table-dark">
         <tr>
+            <th>Código</th>
             <th>Nombre</th>
             <th>Tipo</th>
             <th>Precio</th>
@@ -27,6 +28,7 @@
     <tbody>
         {% for producto in productos %}
         <tr class="{% if producto.stock_actual < producto.stock_minimo %}table-danger{% endif %}">
+            <td>{{ producto.codigo }}</td>
             <td>{{ producto.nombre }}</td>
             <td>{{ producto.get_tipo_display }}</td>
             <td>{{ producto.precio }}</td>
@@ -40,7 +42,7 @@
             </td>
         </tr>
         {% empty %}
-        <tr><td colspan="8" class="text-center">No hay productos registrados.</td></tr>
+        <tr><td colspan="9" class="text-center">No hay productos registrados.</td></tr>
         {% endfor %}
     </tbody>
 </table>
