--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,6 +20,11 @@
   {% endif %}
 
   <div class="container py-4">
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      {% endfor %}
+    {% endif %}
     {% block content %}{% endblock %}
   </div>
 
