--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -24,6 +24,9 @@
       </div>
 
       <button type="submit" class="btn btn-primary w-100">Entrar</button>
+      <div class="text-center mt-3">
+        <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
+      </div>
     </form>
   </div>
 </div>
