--- a/core/templates/core/producto_list.html
+++ b/core/templates/core/producto_list.html
@@ -1,1 +1,5 @@
-<html><body><h1>Producto List</h1></body></html>
+{% extends "core/base.html" %}
+{% block title %}Productos{% endblock %}
+{% block content %}
+<div id="root"></div>
+{% endblock %}
