--- a/core/templates/core/reporte_inventario.html
+++ b/core/templates/core/reporte_inventario.html
@@ -1,1 +1,5 @@
-<html><body><h1>Inventario</h1></body></html>
+{% extends "core/base.html" %}
+{% block title %}Inventario{% endblock %}
+{% block content %}
+<div id="root"></div>
+{% endblock %}
