--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Inicio</title>
-</head>
-<body>
-  <h1>Página de inicio</h1>
-  {% if alerta_stock %}
-  <p>Productos con stock bajo: {{ alerta_stock }}</p>
-  {% endif %}
-</body>
-</html>
+{% extends "core/base.html" %}
+{% block title %}Inicio{% endblock %}
+{% block content %}
+<div id="root" data-alerta-stock="{{ alerta_stock }}"></div>
+{% endblock %}
